--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,8 +114,9 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins/Poppins-Regular.ttf
-        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
-          weight: 700
+        - asset: assets/fonts/Poppins/Poppins-SemiBold.ttf
+#          weight: 700
+  #         style: italic
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
